Bug 152483 - ONLINE: Calc insert hyperlink behaviour is wrong.
Summary: ONLINE: Calc insert hyperlink behaviour is wrong.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Gülşah Köse
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-12 11:22 UTC by Gülşah Köse
Modified: 2022-12-15 13:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gülşah Köse 2022-12-12 11:22:04 UTC
Description:
-

Steps to Reproduce:
1. Insert a hyperlink to A1 (eg text = "aaa" link = "xxx")
2. Switch to another cell.
3. Double click to A1 again. (Cursor is end of the text and we didn't highlight anythink)
4. Try to insert hyperlink again.

Actual Results:
It should open an empty dialog to add new hyperlink. Because there is no hyperlink under the cursor and we didn't select any text (core side is OK) 

Expected Results:
It opens the hyperlink dialog with "aaa" and "xxx"


Reproducible: Always


User Profile Reset: No

Additional Info:
-
Comment 1 Gülşah Köse 2022-12-12 11:33:53 UTC
*Actual and expected part should be opposite.
Comment 2 Commit Notification 2022-12-14 12:15:31 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e9356f9ced3167cd927e98617bab54048cc63073

tdf#152483 Fix the insert hyperlink behaviour on Calc

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.