tdf#152483 Fix the insert hyperlink behaviour on Calc

Cursor invalidation message shouldn't carry a hyperlink info to online
side if there is no hyperlink under the cursor

Change-Id: Ibdb6e32d029e101212d03bc117a5a14a712822ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143986
Tested-by: Jenkins
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>